--- a/src/presentation/templates/users.html
+++ b/src/presentation/templates/users.html
@@ -1,35 +1,149 @@
-<!--<table border="1">
-    {% for user in userDetails %}
-    <tr>
-        <td> {{user[0]}} </td>
-        <td> {{user[1]}} </td>
-    </tr>
-    {% endfor %}
-</table>-->
-
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Account info</title>
+    <title>Account</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}"/>
 </head>
 <body>
 {% include 'navBar.html' %}
+    <section class="my-5 jumbotron text-center" style="background-color: transparent; height: 400px">
+        <div class="pt-5 container justify-content-center">
+            <h1 class="display-2" style="font-weight: 300;">Profil</h1>
+            </p>
+        </div>
+    </section>
+    <div class="bg-light" style="padding-bottom: 3rem">
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul class="alert-warning alert">
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {%else%}
 
-<h2>Account info</h2><br><br>
+        {% endif %}
+        {% endwith %}
 
+        <div class="container w-75 justify-content-center">
+            <h3 style="  display: inline">
+                <svg class="bi bi-people-circle justify-content-center" style="margin-top:-1.5em; text-align: center;" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 008 15a6.987 6.987 0 005.468-2.63z"/>
+                    <path fill-rule="evenodd" d="M8 9a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+                    <path fill-rule="evenodd" d="M8 1a7 7 0 100 14A7 7 0 008 1zM0 8a8 8 0 1116 0A8 8 0 010 8z" clip-rule="evenodd"/>
+                </svg>   <h3 style="display: inline">{{user[3]}} {{user[4]}}</h3></h3>
+            <div class="py-4 px-4" style="margin-top: 50px;">
+                <h3 class="mb-3 pb-2 border-bottom">
+                    <svg class="bi bi-at" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M13.106 7.222c0-2.967-2.249-5.032-5.482-5.032-3.35 0-5.646 2.318-5.646 5.702 0 3.493 2.235 5.708 5.762 5.708.862 0 1.689-.123 2.304-.335v-.862c-.43.199-1.354.328-2.29.328-2.926 0-4.813-1.88-4.813-4.798 0-2.844 1.921-4.881 4.594-4.881 2.735 0 4.608 1.688 4.608 4.156 0 1.682-.554 2.769-1.416 2.769-.492 0-.772-.28-.772-.76V5.206H8.923v.834h-.11c-.266-.595-.881-.964-1.6-.964-1.4 0-2.378 1.162-2.378 2.823 0 1.737.957 2.906 2.379 2.906.8 0 1.415-.39 1.709-1.087h.11c.081.67.703 1.148 1.503 1.148 1.572 0 2.57-1.415 2.57-3.643zm-7.177.704c0-1.197.54-1.907 1.456-1.907.93 0 1.524.738 1.524 1.907S8.308 9.84 7.371 9.84c-.895 0-1.442-.725-1.442-1.914z" clip-rule="evenodd"/>
+                    </svg>
+                    Email: {{ user[1] }}
+                </h3>
+                <h3 class="mb-3 pb-2 border-bottom">
+                    <svg class="bi bi-table" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M14 1H2a1 1 0 00-1 1v12a1 1 0 001 1h12a1 1 0 001-1V2a1 1 0 00-1-1zM2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2z" clip-rule="evenodd"/>
+                        <path fill-rule="evenodd" d="M15 4H1V3h14v1z" clip-rule="evenodd"/>
+                        <path fill-rule="evenodd" d="M5 15.5v-14h1v14H5zm5 0v-14h1v14h-1z" clip-rule="evenodd"/>
+                        <path fill-rule="evenodd" d="M15 8H1V7h14v1zm0 4H1v-1h14v1z" clip-rule="evenodd"/>
+                        <path d="M0 2a2 2 0 012-2h12a2 2 0 012 2v2H0V2z"/>
+                    </svg>
+                    Birthdate: {{ user[6] }}
+                </h3>
+                <h3 class="mb-3 pb-2 border-bottom">
+                    <svg class="bi bi-person-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+                    </svg>
+                    Gender: {{ user[5] }}
+                </h3>
+                <h3 class="mb-3 pb-2 border-bottom">
+                    <svg class="bi bi-geo-alt" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M8 16s6-5.686 6-10A6 6 0 002 6c0 4.314 6 10 6 10zm0-7a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+                    </svg>
+                    Country: {{ user[7] }}
+                </h3>
+                <h3 class="mb-3 pb-2 border-bottom">
+                    <svg class="bi bi-phone" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M11 1H5a1 1 0 00-1 1v12a1 1 0 001 1h6a1 1 0 001-1V2a1 1 0 00-1-1zM5 0a2 2 0 00-2 2v12a2 2 0 002 2h6a2 2 0 002-2V2a2 2 0 00-2-2H5z" clip-rule="evenodd"/>
+                        <path fill-rule="evenodd" d="M8 14a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"/>
+                    </svg>
+                    Phone number: {{ user[8] }}
+                </h3>
+            </div>
+        </div>
+        {% if tripAsDriver is defined and tripAsDriver|length %}
 
-   <label for="userID">User's ID:</label><br><br>
-    <label for="fname">First name:</label><br><br>
-    <label for="lname">Last name:</label><br><br>
-    <label for="email">Email:</label><br><br>
-    <label for="gender">Gender:</label><br><br>
-    <label for="birthdate">Birthdate:</label><br><br>
-    <label for="country">Country:</label><br><br>
-    <label for="phone">Phone number:</label><br><br>
-    <label for="Balance">Balance:</label><br><br><br><br>
+        <div class="container w-75 py-4 px-4">
 
+            <h1> Trips as driver </h1>
+            <div class="py-4 px-4">
+                {% for trip in tripAsDriver %}
+                    <h3 class="mb-3 pb-2">
+                        <svg class="bi bi-geo-alt" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M8 16s6-5.686 6-10A6 6 0 002 6c0 4.314 6 10 6 10zm0-7a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+                        </svg>
+                        From: {{ trip[2] }}
+                    </h3>
+                    <h3 class="mb-3 pb-2">
+                        <svg class="bi bi-geo" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M11 4a3 3 0 11-6 0 3 3 0 016 0z"/>
+                            <path d="M7.5 4h1v9a.5.5 0 01-1 0V4z"/>
+                            <path fill-rule="evenodd" d="M6.489 12.095a.5.5 0 01-.383.594c-.565.123-1.003.292-1.286.472-.302.192-.32.321-.32.339 0 .013.005.085.146.21.14.124.372.26.701.382.655.246 1.593.408 2.653.408s1.998-.162 2.653-.408c.329-.123.56-.258.701-.382.14-.125.146-.197.146-.21 0-.018-.018-.147-.32-.339-.283-.18-.721-.35-1.286-.472a.5.5 0 11.212-.977c.63.137 1.193.34 1.61.606.4.253.784.645.784 1.182 0 .402-.219.724-.483.958-.264.235-.618.423-1.013.57-.793.298-1.855.472-3.004.472s-2.21-.174-3.004-.471c-.395-.148-.749-.336-1.013-.571-.264-.234-.483-.556-.483-.958 0-.537.384-.929.783-1.182.418-.266.98-.47 1.611-.606a.5.5 0 01.595.383z" clip-rule="evenodd"/>
+                        </svg>
+                        To: {{ trip[3] }}
+                    </h3>
+                    <h3 class="mb-3 pb-2 border-bottom">
+                        <svg class="bi bi-table" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M14 1H2a1 1 0 00-1 1v12a1 1 0 001 1h12a1 1 0 001-1V2a1 1 0 00-1-1zM2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2z" clip-rule="evenodd"/>
+                            <path fill-rule="evenodd" d="M15 4H1V3h14v1z" clip-rule="evenodd"/>
+                            <path fill-rule="evenodd" d="M5 15.5v-14h1v14H5zm5 0v-14h1v14h-1z" clip-rule="evenodd"/>
+                            <path fill-rule="evenodd" d="M15 8H1V7h14v1zm0 4H1v-1h14v1z" clip-rule="evenodd"/>
+                            <path d="M0 2a2 2 0 012-2h12a2 2 0 012 2v2H0V2z"/>
+                        </svg>
+                        Date: {{ trip[1] }}
+                    </h3>
+                {% endfor %}
+            </div>
+        </div>
 
+        {% endif %}
+
+        {% if tripAsPassenger is defined and tripAsPassenger|length %}
+
+        <div class="container w-75 py-4 px-4">
+
+            <h1> Trips as passenger </h1>
+            <div class="py-4 px-4">
+                {% for trip in tripAsPassenger %}
+                <h3 class="mb-3 pb-2">
+                    <svg class="bi bi-geo-alt" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M8 16s6-5.686 6-10A6 6 0 002 6c0 4.314 6 10 6 10zm0-7a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+                    </svg>
+                    From: {{ trip[2] }}
+                </h3>
+                <h3 class="mb-3 pb-2">
+                    <svg class="bi bi-geo" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M11 4a3 3 0 11-6 0 3 3 0 016 0z"/>
+                        <path d="M7.5 4h1v9a.5.5 0 01-1 0V4z"/>
+                        <path fill-rule="evenodd" d="M6.489 12.095a.5.5 0 01-.383.594c-.565.123-1.003.292-1.286.472-.302.192-.32.321-.32.339 0 .013.005.085.146.21.14.124.372.26.701.382.655.246 1.593.408 2.653.408s1.998-.162 2.653-.408c.329-.123.56-.258.701-.382.14-.125.146-.197.146-.21 0-.018-.018-.147-.32-.339-.283-.18-.721-.35-1.286-.472a.5.5 0 11.212-.977c.63.137 1.193.34 1.61.606.4.253.784.645.784 1.182 0 .402-.219.724-.483.958-.264.235-.618.423-1.013.57-.793.298-1.855.472-3.004.472s-2.21-.174-3.004-.471c-.395-.148-.749-.336-1.013-.571-.264-.234-.483-.556-.483-.958 0-.537.384-.929.783-1.182.418-.266.98-.47 1.611-.606a.5.5 0 01.595.383z" clip-rule="evenodd"/>
+                    </svg>
+                    To: {{ trip[3] }}
+                </h3>
+                <h3 class="mb-3 pb-2 border-bottom">
+                    <svg class="bi bi-table" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M14 1H2a1 1 0 00-1 1v12a1 1 0 001 1h12a1 1 0 001-1V2a1 1 0 00-1-1zM2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2z" clip-rule="evenodd"/>
+                        <path fill-rule="evenodd" d="M15 4H1V3h14v1z" clip-rule="evenodd"/>
+                        <path fill-rule="evenodd" d="M5 15.5v-14h1v14H5zm5 0v-14h1v14h-1z" clip-rule="evenodd"/>
+                        <path fill-rule="evenodd" d="M15 8H1V7h14v1zm0 4H1v-1h14v1z" clip-rule="evenodd"/>
+                        <path d="M0 2a2 2 0 012-2h12a2 2 0 012 2v2H0V2z"/>
+                    </svg>
+                    Date: {{ trip[1] }}
+                </h3>
+                {% endfor %}
+            </div>
+        </div>
+
+        {% endif %}
+    </div>
 
 </body>
 </html>
