--- a/src/presentation/templates/users.html
+++ b/src/presentation/templates/users.html
@@ -76,7 +76,7 @@
                     </svg>
                     Balance: {{ user[9] }} $
                     </h3>
-                    <form action="/fillAccount" style="display: inline; margin-left: 80%">
+                    <form action="/fillAccount/{{ user[0] }}" style="display: inline; margin-left: 80%">
                         <button type="submit" class="btn btn-light btn-outline-dark">Add money</button>
                     </form>
                 </div>
@@ -88,32 +88,43 @@
 
             <h1> Trips as driver </h1>
             <div class="py-4 px-4">
+                <div>
                 {% for trip in tripAsDriver %}
-                    <h3 class="mb-3 pb-2">
-                        <svg class="bi bi-geo-alt" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M8 16s6-5.686 6-10A6 6 0 002 6c0 4.314 6 10 6 10zm0-7a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
-                        </svg>
-                        From: {{ trip[2] }}
-                    </h3>
-                    <h3 class="mb-3 pb-2">
-                        <svg class="bi bi-geo" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M11 4a3 3 0 11-6 0 3 3 0 016 0z"/>
-                            <path d="M7.5 4h1v9a.5.5 0 01-1 0V4z"/>
-                            <path fill-rule="evenodd" d="M6.489 12.095a.5.5 0 01-.383.594c-.565.123-1.003.292-1.286.472-.302.192-.32.321-.32.339 0 .013.005.085.146.21.14.124.372.26.701.382.655.246 1.593.408 2.653.408s1.998-.162 2.653-.408c.329-.123.56-.258.701-.382.14-.125.146-.197.146-.21 0-.018-.018-.147-.32-.339-.283-.18-.721-.35-1.286-.472a.5.5 0 11.212-.977c.63.137 1.193.34 1.61.606.4.253.784.645.784 1.182 0 .402-.219.724-.483.958-.264.235-.618.423-1.013.57-.793.298-1.855.472-3.004.472s-2.21-.174-3.004-.471c-.395-.148-.749-.336-1.013-.571-.264-.234-.483-.556-.483-.958 0-.537.384-.929.783-1.182.418-.266.98-.47 1.611-.606a.5.5 0 01.595.383z" clip-rule="evenodd"/>
-                        </svg>
-                        To: {{ trip[3] }}
-                    </h3>
-                    <h3 class="mb-3 pb-2 border-bottom">
-                        <svg class="bi bi-table" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M14 1H2a1 1 0 00-1 1v12a1 1 0 001 1h12a1 1 0 001-1V2a1 1 0 00-1-1zM2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2z" clip-rule="evenodd"/>
-                            <path fill-rule="evenodd" d="M15 4H1V3h14v1z" clip-rule="evenodd"/>
-                            <path fill-rule="evenodd" d="M5 15.5v-14h1v14H5zm5 0v-14h1v14h-1z" clip-rule="evenodd"/>
-                            <path fill-rule="evenodd" d="M15 8H1V7h14v1zm0 4H1v-1h14v1z" clip-rule="evenodd"/>
-                            <path d="M0 2a2 2 0 012-2h12a2 2 0 012 2v2H0V2z"/>
-                        </svg>
-                        Date: {{ trip[1] }}
-                    </h3>
+                    <div class="mb-3 pb-2 border-bottom">
+                        <h3 class="mb-3 pb-2">
+                            <svg class="bi bi-geo-alt" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M8 16s6-5.686 6-10A6 6 0 002 6c0 4.314 6 10 6 10zm0-7a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+                            </svg>
+                            From: {{ trip[2] }}
+                        </h3>
+
+                            <h3 class="mb-3 pb-2">
+                                <svg class="bi bi-geo" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M11 4a3 3 0 11-6 0 3 3 0 016 0z"/>
+                                    <path d="M7.5 4h1v9a.5.5 0 01-1 0V4z"/>
+                                    <path fill-rule="evenodd" d="M6.489 12.095a.5.5 0 01-.383.594c-.565.123-1.003.292-1.286.472-.302.192-.32.321-.32.339 0 .013.005.085.146.21.14.124.372.26.701.382.655.246 1.593.408 2.653.408s1.998-.162 2.653-.408c.329-.123.56-.258.701-.382.14-.125.146-.197.146-.21 0-.018-.018-.147-.32-.339-.283-.18-.721-.35-1.286-.472a.5.5 0 11.212-.977c.63.137 1.193.34 1.61.606.4.253.784.645.784 1.182 0 .402-.219.724-.483.958-.264.235-.618.423-1.013.57-.793.298-1.855.472-3.004.472s-2.21-.174-3.004-.471c-.395-.148-.749-.336-1.013-.571-.264-.234-.483-.556-.483-.958 0-.537.384-.929.783-1.182.418-.266.98-.47 1.611-.606a.5.5 0 01.595.383z" clip-rule="evenodd"/>
+                                </svg>
+                                To: {{ trip[3] }}
+                            </h3>
+                        <div class="w-100">
+
+                            <h3 class="mb-5 pb-4" style="display: inline">
+                                <svg class="bi bi-table" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" d="M14 1H2a1 1 0 00-1 1v12a1 1 0 001 1h12a1 1 0 001-1V2a1 1 0 00-1-1zM2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2z" clip-rule="evenodd"/>
+                                    <path fill-rule="evenodd" d="M15 4H1V3h14v1z" clip-rule="evenodd"/>
+                                    <path fill-rule="evenodd" d="M5 15.5v-14h1v14H5zm5 0v-14h1v14h-1z" clip-rule="evenodd"/>
+                                    <path fill-rule="evenodd" d="M15 8H1V7h14v1zm0 4H1v-1h14v1z" clip-rule="evenodd"/>
+                                    <path d="M0 2a2 2 0 012-2h12a2 2 0 012 2v2H0V2z"/>
+                                </svg>
+                                Date: {{ trip[1] }}
+                            </h3>
+                            <form action="/pickupinfo/{{ trip[0] }}" style="display: inline;" class="mb-3 pb-2">
+                                <button type="submit" class="btn btn-light btn-outline-dark">More info</button>
+                            </form>
+                        </div>
+                    </div>
                 {% endfor %}
+                </div>
             </div>
         </div>
 
@@ -150,6 +161,9 @@
                     </svg>
                     Date: {{ trip[1] }}
                 </h3>
+                <form action="/confirmtrip/{{ trip[0] }}" style="display: inline;" class="mb-3 pb-2">
+                    <button type="submit" class="btn btn-light btn-outline-dark">More info</button>
+                </form>
                 {% endfor %}
             </div>
         </div>
