--- a/src/presentation/templates/paymentTrip.html
+++ b/src/presentation/templates/paymentTrip.html
@@ -170,7 +170,7 @@
 <div class="py-5 pb-5 bg-light">
     <div class="container" style="width: 100%">
         <div style="margin-bottom: 50px; margin-left: 80%">
-            <form action="/confirmtrip/{{currentTrip[0]}}">
+            <form action="/confirmtrip/{{currentTrip[0]}}" method="POST">
                 <button type="submit" class="btn btn-primary my-2" style="width: 300px">
                     <svg class="bi bi-bag" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" d="M14 5H2v9a1 1 0 001 1h10a1 1 0 001-1V5zM1 4v10a2 2 0 002 2h10a2 2 0 002-2V4H1z" clip-rule="evenodd"/>
