--- a/src/presentation/templates/searchlift.html
+++ b/src/presentation/templates/searchlift.html
@@ -1,13 +1,113 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Search a lift</title>
+    <title>Search</title>
 </head>
 <body>
 {% include 'navBar.html' %}
 
-<h2>Search for a lift</h2>
+<section class="my-5 jumbotron text-center" style="background-color: white; height: 300px">
+    <div class="pt-5 container">
+        <h1 class="jumbotron-heading" style="font-weight: 300">Search.</h1>
+        <p class="lead text-muted">Filter the available trips with your requests.</p>
+    </div>
+</section>
 
+<div class="py-5 bg-light">
+    <div class="row" style="margin: 0">
+        <div class="col-md-4">
+            <div class="py-3" style="background-color: white">
+                <h2 class="mx-3">Filter</h2>
+                <form action="/searchlift" method="POST" class="mx-3">
+
+                    <div class="mb-3">
+                        <label for="departure">Departure <span class="text-muted">(Optional)</span> </label>
+                        <input type="text" id="departure" name="departure" class="form-control">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="destination">Destination <span class="text-muted">(Optional)</span> </label>
+                        <input type="text" id="destination" name="destination" class="form-control">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="date">Date <span class="text-muted">(Optional)</span> </label>
+                        <input type="date" id="date" name="date" class="form-control">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="seats">Seats available <span class="text-muted">(Optional)</span> </label>
+                        <input type="number" min="0" id="seats" name="seats" class="form-control">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="maxPrice">Maximum Price <span class="text-muted">(Optional)</span> </label>
+                        <input type="number" min="0" id="maxPrice" name="maxPrice" class="form-control">
+                    </div>
+
+                    <button type="submit" class="btn btn-primary" style="width: 25%; margin-left: 70%">
+                        <svg class="bi bi-funnel" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M1.5 1.5A.5.5 0 012 1h12a.5.5 0 01.5.5v2a.5.5 0 01-.128.334L10 8.692V13.5a.5.5 0 01-.342.474l-3 1A.5.5 0 016 14.5V8.692L1.628 3.834A.5.5 0 011.5 3.5v-2zm1 .5v1.308l4.372 4.858A.5.5 0 017 8.5v5.306l2-.666V8.5a.5.5 0 01.128-.334L13.5 3.308V2h-11z" clip-rule="evenodd"/>
+                        </svg>
+                        Apply
+                    </button>
+
+                </form>
+            </div>
+        </div>
+        <div class="col-md-8">
+            <div class="container">
+                <div class="row" style="z-index: 4;">
+                    {% for trip in trajets %}
+                    <div class="col-md-4" style="z-index: 5;">
+                        <div class="card mb-4 box-shadow">
+                            {% set img = "../../static/images/%s.jpg" | format(trip[3]) %}
+                            <img class="card-img-top" src={{img}} onerror="this.src='../../static/images/welift.jpg'" style="max-height: 10em" alt={{ trip[3] }}>
+                            <div class="card-body">
+                                <p class="card-text">
+                                <p>
+                                    <svg class="bi bi-geo-alt" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M8 16s6-5.686 6-10A6 6 0 002 6c0 4.314 6 10 6 10zm0-7a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+                                    </svg>
+                                    Departure: {{ trip[2] }}
+                                </p>
+                                <p>
+                                    <svg class="bi bi-geo-alt" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M8 16s6-5.686 6-10A6 6 0 002 6c0 4.314 6 10 6 10zm0-7a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+                                    </svg>
+                                    Destination: {{ trip[3] }}
+                                </p>
+                                <p>
+                                    <svg class="bi bi-calendar" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M14 0H2a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z" clip-rule="evenodd"/>
+                                        <path fill-rule="evenodd" d="M6.5 7a1 1 0 100-2 1 1 0 000 2zm3 0a1 1 0 100-2 1 1 0 000 2zm3 0a1 1 0 100-2 1 1 0 000 2zm-9 3a1 1 0 100-2 1 1 0 000 2zm3 0a1 1 0 100-2 1 1 0 000 2zm3 0a1 1 0 100-2 1 1 0 000 2zm3 0a1 1 0 100-2 1 1 0 000 2zm-9 3a1 1 0 100-2 1 1 0 000 2zm3 0a1 1 0 100-2 1 1 0 000 2zm3 0a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"/>
+                                    </svg>
+                                    Date: {{ trip[1] }}
+                                </p>
+                                </p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        {% if session['ID'] %}
+                                        <form action="/paymentTrip/{{ trip[0] }}">
+                                            <button type="submit" class="btn btn-sm btn-primary" style="width: 100px">Select</button>
+                                        </form>
+                                        {% else %}
+                                        <button type="submit" class="btn btn-sm btn-primary disabled" style="width: 100px">Select</button>
+                                        {% endif %}
+                                    </div>
+                                    <small class="text-muted">{{ trip[9] }}$/pers</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--
 <form action="/searchlift" method="POST">
     <label for="departure">Departure:</label><br>
     <input type="text" id="departure" name="departure" ><br><br>
@@ -45,7 +145,7 @@
 
 </div>
 {%endfor%}
-
+-->
 
 </body>
 </html>
