--- a/src/presentation/templates/users.html
+++ b/src/presentation/templates/users.html
@@ -6,12 +6,13 @@
 </head>
 <body>
 {% include 'navBar.html' %}
-    <section class="my-5 jumbotron text-center" style="background-color: transparent; height: 400px">
-        <div class="pt-5 container justify-content-center">
-            <h1 class="display-2" style="font-weight: 300;">Profil</h1>
-            </p>
-        </div>
-    </section>
+<section class="my-5 jumbotron text-center" style="background-color: white; height: 300px">
+    <div class="pt-5 container">
+        <h1 class="jumbotron-heading" style="font-weight: 300">Profil.</h1>
+        <p class="lead text-muted">From here, you can see your informations and trips.</p>
+    </div>
+</section>
+
     <div class="bg-light" style="padding-bottom: 3rem">
         {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -25,14 +26,17 @@
         {% endif %}
         {% endwith %}
 
-        <div class="container w-75 justify-content-center">
-            <h3 style="  display: inline">
-                <svg class="bi bi-people-circle justify-content-center" style="margin-top:-1.5em; text-align: center;" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <div class="container w-75 my-5 py-4 px-4">
+            <h3 class="mb-3 pb-2 display-4">
+                <svg class="bi bi-people-circle" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 008 15a6.987 6.987 0 005.468-2.63z"/>
                     <path fill-rule="evenodd" d="M8 9a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
                     <path fill-rule="evenodd" d="M8 1a7 7 0 100 14A7 7 0 008 1zM0 8a8 8 0 1116 0A8 8 0 010 8z" clip-rule="evenodd"/>
-                </svg>   <h3 style="display: inline">{{user[3]}} {{user[4]}}</h3></h3>
-            <div class="py-4 px-4" style="margin-top: 50px;">
+                </svg>
+                {{user[3]}} {{user[4]}}
+            </h3>
+
+            <div class="py-5">
                 <h3 class="mb-3 pb-2 border-bottom">
                     <svg class="bi bi-at" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" d="M13.106 7.222c0-2.967-2.249-5.032-5.482-5.032-3.35 0-5.646 2.318-5.646 5.702 0 3.493 2.235 5.708 5.762 5.708.862 0 1.689-.123 2.304-.335v-.862c-.43.199-1.354.328-2.29.328-2.926 0-4.813-1.88-4.813-4.798 0-2.844 1.921-4.881 4.594-4.881 2.735 0 4.608 1.688 4.608 4.156 0 1.682-.554 2.769-1.416 2.769-.492 0-.772-.28-.772-.76V5.206H8.923v.834h-.11c-.266-.595-.881-.964-1.6-.964-1.4 0-2.378 1.162-2.378 2.823 0 1.737.957 2.906 2.379 2.906.8 0 1.415-.39 1.709-1.087h.11c.081.67.703 1.148 1.503 1.148 1.572 0 2.57-1.415 2.57-3.643zm-7.177.704c0-1.197.54-1.907 1.456-1.907.93 0 1.524.738 1.524 1.907S8.308 9.84 7.371 9.84c-.895 0-1.442-.725-1.442-1.914z" clip-rule="evenodd"/>
